# rivescript-python

./: pyproject.toml  setup.py
rivescript/: brain.py
tests/: test_botvars.py  test_replies.py  test_unicode.py
